name:         dfrp
version:      0.0.1.0
license:      MIT
license-file: LICENSE
author:       Alistair Lynn
maintainer:   Alistair Lynn <arplynn@gmail.com>
category:     Control
synopsis:     DFRP event streams and properties
description:
    A portable library of DFRP event streams, properties, and combinators.
build-type:    Simple
cabal-version: >= 1.6

library
  exposed-modules: Control.DFRP.EventStream,
                   Control.DFRP.Property,
                   Control.DFRP.EventUtils
  build-depends:   base >= 3, mtl >= 2, hspec >= 1.5

test-suite test-dfrp
  type:          exitcode-stdio-1.0
  main-is:       test-dfrp.hs
  build-depends: hspec >= 1.5, QuickCheck >= 2.5

